[tool.poetry]
name = "reweave"
version = "0.1.0"
description = ""
authors = ["Chandresh Kumar <chandresh.code@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
moviepy = "^1.0.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
